# VideoEncodeRtsp

./: CMakeLists.txt  ffmpeg_encode_frame.cpp  ffmpeg_encode_frame.h  ffmpeg_remuxing.cpp  ffmpeg_remuxing.h  main.cpp
